<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_4sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/replacemeter_add_place"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/replacemeter_add_place_title"
        android:textColor="@color/navy"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toStartOf="@id/btnSubmit"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_primary_button"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/replacemeter_submit"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/_12sdp"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack" />

    <TextView
        android:id="@+id/tvPhotosLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_12sdp"
        android:text="@string/replacemeter_env_photos"
        android:textColor="@color/primary"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddress" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPhotos"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhotosLabel" />

    <EditText
        android:id="@+id/etRemark"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:background="@drawable/bg_input_meter"
        android:hint="@string/replacemeter_remark_hint"
        android:maxLength="100"
        android:paddingHorizontal="@dimen/_10sdp"
        android:textColor="@color/navy"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvPhotos" />

    <com.amap.api.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etRemark" />

    <TextView
        android:id="@+id/btnRelocate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_32sdp"
        android:layout_margin="@dimen/_12sdp"
        android:background="@drawable/bg_soft_button"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_10sdp"
        android:text="@string/calibration_relocate"
        android:textColor="@color/primary"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintTop_toTopOf="@id/mapView" />

    <ImageView
        android:id="@+id/centerMark"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:contentDescription="@string/replacemeter_map"
        android:src="@mipmap/marker_un_read"
        app:layout_constraintBottom_toBottomOf="@id/mapView"
        app:layout_constraintEnd_toEndOf="@id/mapView"
        app:layout_constraintStart_toStartOf="@id/mapView"
        app:layout_constraintTop_toTopOf="@id/mapView" />
</androidx.constraintlayout.widget.ConstraintLayout>
